@@ -5,8 +5,14 @@ import io.github.hectorvent.floci.core.storage.StorageBackend;
 import io.github.hectorvent.floci.services.sqs.model.Message;
 
 import java.time.Instant;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Iterator;
+import java.util.List;
+import java.util.Optional;
+import java.util.Set;
+import java.util.UUID;
 import java.util.concurrent.locks.ReentrantLock;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
 /**
@@ -47,23 +53,31 @@ class GuardedMessageQueue {
     }
 
     void addMessage(Message message) {
-        try (var _ = hold()) {
+        try (Guard _ = hold()) {
             messages.add(message);
             persist();
         }
     }
 
+    /** If persisting fails the in-memory add is rolled back and the exception propagates, so a
+     *  caller that compensates on the source side does not leave a duplicate here. */
     void addAll(List<Message> toAdd) {
-        try (var _ = hold()) {
+        try (Guard _ = hold()) {
+            int mark = messages.size();
             messages.addAll(toAdd);
-            persist();
+            try {
+                persist();
+            } catch (RuntimeException e) {
+                messages.subList(mark, messages.size()).clear();
+                throw e;
+            }
         }
     }
 
     ClaimResult claimVisibleMessages(int maxMessages, int effectiveTimeout,
                                      boolean fifo, int maxReceiveCount,
                                      String deadLetterTargetArn) {
-        try (var _ = hold()) {
+        try (Guard _ = hold()) {
             List<Message> claimed = new ArrayList<>();
             List<Message> dlqCandidates = new ArrayList<>();
 
@@ -141,7 +155,7 @@ class GuardedMessageQueue {
     }
 
     Optional<Message> removeByReceiptHandle(String receiptHandle) {
-        try (var _ = hold()) {
+        try (Guard _ = hold()) {
             Message removed = null;
             for (Iterator<Message> it = messages.iterator(); it.hasNext(); ) {
                 Message m = it.next();
@@ -159,7 +173,7 @@ class GuardedMessageQueue {
     }
 
     boolean changeVisibility(String receiptHandle, int visibilityTimeout) {
-        try (var _ = hold()) {
+        try (Guard _ = hold()) {
             for (Message msg : messages) {
                 if (receiptHandle.equals(msg.getReceiptHandle())) {
                     msg.setVisibleAt(Instant.now().plusSeconds(visibilityTimeout));
@@ -172,21 +186,21 @@ class GuardedMessageQueue {
     }
 
     void removeMessages(List<Message> toRemove) {
-        try (var _ = hold()) {
+        try (Guard _ = hold()) {
             messages.removeAll(toRemove);
             persist();
         }
     }
 
     void purge() {
-        try (var _ = hold()) {
+        try (Guard _ = hold()) {
             messages.clear();
             persist();
         }
     }
 
     List<Message> drainAll() {
-        try (var _ = hold()) {
+        try (Guard _ = hold()) {
             List<Message> drained = new ArrayList<>(messages);
             messages.clear();
             persist();
@@ -194,17 +208,26 @@ class GuardedMessageQueue {
         }
     }
 
-    /** Remove and return the first message in insertion order, or null if empty.
-     *  Used by the message-move-task worker so the source queue stays observably
-     *  populated for the duration of a rate-limited move. */
-    Message drainOne() {
-        try (var _ = hold()) {
-            if (messages.isEmpty()) {
+    /** Remove and return the head message if {@code eligible} accepts it; otherwise leave the
+     *  queue untouched and return {@code null}. The check and the removal happen under one lock
+     *  hold so nothing can slip in between. Used by the message-move-task worker so the source
+     *  queue stays observably populated for the duration of a rate-limited move. */
+    Message drainFirstIf(Predicate<Message> eligible) {
+        try (Guard _ = hold()) {
+            if (messages.isEmpty() || !eligible.test(messages.getFirst())) {
                 return null;
             }
-            Message head = messages.remove(0);
+            Message head = messages.removeFirst();
             persist();
             return head;
+        }
+    }
+
+    /** Put a message that could not be delivered back at the head, preserving queue order. */
+    void restoreFirst(Message message) {
+        try (Guard _ = hold()) {
+            messages.addFirst(message);
+            persist();
         }
     }
 
@@ -220,7 +243,7 @@ class GuardedMessageQueue {
      * DelaySeconds, so it counts as delayed rather than in flight.
      */
     MessageCounts messageCounts() {
-        try (var _ = hold()) {
+        try (Guard _ = hold()) {
             long visible = 0;
             long inFlight = 0;
             long delayed = 0;
@@ -238,13 +261,13 @@ class GuardedMessageQueue {
     }
 
     List<Message> peekAll() {
-        try (var _ = hold()) {
+        try (Guard _ = hold()) {
             return new ArrayList<>(messages);
         }
     }
 
     boolean isEmpty() {
-        try (var _ = hold()) {
+        try (Guard _ = hold()) {
             return messages.isEmpty();
         }
     }
@@ -254,7 +277,7 @@ class GuardedMessageQueue {
     }
 
     Message findByDeduplicationId(String dedupId, String messageGroupId) {
-        try (var _ = hold()) {
+        try (Guard _ = hold()) {
             return messages.stream()
                     .filter(msg -> dedupId.equals(msg.getMessageDeduplicationId()))
                     .filter(msg -> messageGroupId == null
